--- a/index.html
+++ b/index.html
@@ -1,27 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Javascript Practice</title>
 </head>
 <body>
-
-    <button id="btn">
-        CLICK
-    </button>
-
-    <input type="radio" name="radio" id="radio1" />
-    <label for="radio1">Radio label text</label>
-
-    <label for="radio">
-        <input type="radio" name="radio" id="radio" />
-        Radio labeext
-      </label>
-    
-
-<script src="practice.js"></script>
+  
+  <script src="./practice.js"></script>
 </body>
 </html>
